Tue Jan 13 21:59:24 2015  Michal Papis  <mpapis@gmail.com>

	* tool/rbinstall.rb (gem): fix changing permissions of installed
	  bundled gems.  [Fix GH-812]

Tue Jan 13 21:57:12 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (distclean-local): remove autom4te.cache generated by
	  autoconf.

	* common.mk (realclean-local): remove id sources and dummy header
	  for dtrace.  [ruby-core:67562] [Bug #10737]

Tue Jan 13 21:08:22 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* ext/json, test/json: merge JSON HEAD(259dee6)
	  separate imprementation of Typed_Data macro.
	  https://github.com/flori/json/compare/v1.8.1...v1.8.2

Tue Jan 13 14:16:35 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/net/http/test_http.rb: get rid of accessing DNS actually
	  for some servers returning wrong results.
	  [ruby-core:67454] [Bug #10721]

Mon Jan 12 23:21:57 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* gems/bundled_gems: update test-unit to 3.0.9.

Mon Jan 12 18:35:44 2015  Eric Wong  <e@80x24.org>

	* numeric.c (bit_coerce): use original value for error message
	  [ruby-core:67405] [Bug #10711]
	* test/ruby/test_numeric.rb (test_coerce): check error message

Mon Jan 12 18:01:24 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/rdoc/text.rb (expand_tabs): get rid of infinite loop with
	  CR.  should check if substitution occurred too.
	  [ruby-dev:48813] [Bug #10732]

Mon Jan 12 16:45:46 2015  Seiei Higa  <hanachin@gmail.com>

	* vm_method.c (rb_alias): raise a NameError when creating alias to
	  a refined method if the original method of the refined method is
	  not defined.  [ruby-core:67523] [Bug #10731]

Mon Jan 12 13:53:17 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* math.c (math_atan2): improve documentation.
	  [Feature #10323][ruby-core:65400][ci skip]

Mon Jan 12 13:50:49 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* ext/bigdecimal/bigdecimal.c: fixes documentation like labeled lists,